syntax = "proto3";

package subscription;

enum EventType {
  WEATHER = 0;
  SPORTS = 1;
  MUSIC = 2;
}

message SubscriptionRequest {
  repeated string cities = 1;
  repeated EventType event_types = 2;
}

message UnsubscribeRequest {
  string subscription_id = 1;
  repeated string cities = 2;
  repeated EventType event_types = 3;
}

message UnsubscribeResponse {
  bool success = 1;
}
message Participant {
  string name = 1;
}
message EventNotification {
  string city = 1;
  EventType event_type = 2;
  repeated Participant participants = 3;
  int64 timestamp = 4;
}

service EventService {
  rpc Subscribe(SubscriptionRequest) returns (stream EventNotification);
  rpc Unsubscribe (UnsubscribeRequest) returns (UnsubscribeResponse);
}
